--- a/software/myshoppingcart/client/app/partials/header.html
+++ b/software/myshoppingcart/client/app/partials/header.html
@@ -2,14 +2,14 @@
     <div>
         <h1><a class="n"href="/"> MyShoppingCart </a></h1>
         <nav class="navbar navbar-default">
-            <a class="dropdown-toggle" style="padding-top: 2px"> Home </a>
             <div class="container-fluid">
 
                 <div class="collapse navbar-collapse">
                     <!--<span><i class="fa fa-home" aria-hidden="true" fa-4x></i></span>-->
 
                     <ul class="nav navbar-nav">
-
+                        <li class="dropdown"><a class="dropdown-toggle" href="/"><span><i class="fa fa-home" aria-hidden="true" fa-4x></i></span> Home </a>
+                        </li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown"> Electronics </a>
                             <ul class="dropdown-menu">
